# ur_arm_control

./: .gitignore  package.xml  setup.cfg  setup.py
config/: ur_controllers_namespace.yaml
launch/: general.launch.py  test_scaled_joint_trajectory_controller.launch copy.py  test_scaled_joint_trajectory_planned.launch.py  ur_control.launch.py  view_urdf.launch.py
rviz/: view_collision_robot.rviz  view_robot.rviz  view_urdf.rviz
ur_arm_control/: end_effector_pose_node.py  example_move.py  publisher_joint_trajectory_controller.py  publisher_joint_trajectory_planned.py  publisher_joint_trajectory_planned_topic.py  send_and_monitor_trajectory.py  sensors_arduino.py  sensors_distance.py  sensors_distance_orientation.py  sensors_distance_orientation_sim.py  sensors_orientation.py  sensors_orientation_sim.py
urdf/: BIM_model.urdf  example_building.stl  ur10e.urdf
