<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_arm_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yeray.navarro@upc.edu">yeray</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build tool: ament_python for Python packages -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies for ROS Python code -->
  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>ur_description</depend>
  <depend>ur_controllers</depend>
  <depend>std_srvs</depend>

  <!-- Exec dependencies (runtime dependencies) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>robotic_arm_planner</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
